HAHAHAHHAHAHAHAAHAHHAHHA EU RESOLVI O PROBLEMA, CHUPA PT, CADEIRADA NO ED MANOOOOOOOOO

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -104,7 +104,7 @@
             android:padding="8dp"
             android:background="#101219"
             android:clickable="true"
-            android:onClick="openWebsite">
+            android:onClick="openSobre">
 
             <ImageView
                 android:layout_width="35dp"
