--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,16 +39,17 @@
         android:textStyle="bold"
         android:typeface="sans" />
 
+    <!-- Botões de navegação do carrossel -->
+
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="324dp"
         android:layout_marginTop="260dp"
+        android:clipToPadding="false"
         android:paddingStart="40dp"
-        android:paddingEnd="40dp"
-        android:clipToPadding="false" />
+        android:paddingEnd="40dp" />
 
-    <!-- Botões de navegação do carrossel -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
