--- a/app/src/main/res/layout/fragment_produto.xml
+++ b/app/src/main/res/layout/fragment_produto.xml
@@ -11,27 +11,26 @@
 
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:paddingLeft="12dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imagem_ong"
-        app:srcCompat="@mipmap/ic_launcher_round"
-        />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imagem_ong"
+            android:layout_width="170dp"
+            android:layout_height="180dp"
+            app:srcCompat="@mipmap/ic_launcher_round" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="ONG"
-        android:textColor="@color/white"
-        android:background="@color/black"
-        android:gravity="center"
-        android:id="@+id/nome_ong"
-        />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/nome_ong"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/black"
+            android:gravity="center"
+            android:text="ONG"
+            android:textColor="@color/white" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
